--- a/app/src/main/res/layout/camera_connection_fragment.xml
+++ b/app/src/main/res/layout/camera_connection_fragment.xml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="?attr/actionBarSize">
 
-    <com.dmitrybrant.mushroomhunter.AutoFitTextureView
+    <TextureView
         android:id="@+id/texture"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="bottom"/>
+        android:layout_height="match_parent"/>
 
-    <TextView
-        android:id="@+id/results"
+    <android.support.v7.widget.CardView
+        android:id="@+id/result_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:background="@color/edibleBackground"
-        android:fontFamily="sans-serif-medium"
-        android:textSize="30sp"
-        android:textColor="@android:color/white"
-        tools:text="Result"/>
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="32dp"
+        app:cardElevation="16dp">
+
+        <TextView
+            android:id="@+id/result_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="30sp"
+            tools:text="Result"/>
+
+    </android.support.v7.widget.CardView>
 
     <com.dmitrybrant.mushroomhunter.OverlayView
         android:id="@+id/debug_overlay"
