--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="edibleBackground">#006000</color>
-    <color name="poisonousBackground">#a00000</color>
+    <color name="edibleBackground">#e0f0e0</color>
+    <color name="poisonousBackground">#f0e0e0</color>
 </resources>
