--- a/app/src/main/res/layout/camera_connection_fragment.xml
+++ b/app/src/main/res/layout/camera_connection_fragment.xml
@@ -18,22 +18,103 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginTop="32dp"
-        app:cardElevation="16dp">
+        android:visibility="gone"
+        app:cardElevation="16dp"
+        tools:visibility="visible">
 
-        <TextView
-            android:id="@+id/result_text"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:fontFamily="sans-serif-medium"
-            android:textSize="30sp"
-            tools:text="Result"/>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/result_title_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:fontFamily="sans-serif-medium"
+                android:textSize="32sp"
+                android:textColor="@color/uiElement"
+                android:maxLines="1"
+                android:ellipsize="end"
+                tools:text="Result"/>
+
+            <TextView
+                android:id="@+id/result_binomial_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/result_title_text"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:textStyle="italic"
+                android:textSize="24sp"
+                android:textColor="@color/uiElement"
+                android:maxLines="1"
+                android:ellipsize="end"
+                tools:text="Result"/>
+
+            <View
+                android:id="@+id/result_title_divider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintTop_toBottomOf="@id/result_binomial_text"
+                android:background="@color/uiElement"/>
+
+            <ImageView
+                android:id="@+id/result_save_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:padding="8dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/ic_archive_black_24dp"
+                android:tint="@color/uiElement"/>
+
+            <ImageView
+                android:id="@+id/result_info_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:padding="8dp"
+                android:tint="@color/uiElement"
+                app:layout_constraintEnd_toStartOf="@+id/result_save_button"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:srcCompat="@drawable/ic_info_black_24dp" />
+
+            <ImageView
+                android:id="@+id/result_preview_image"
+                android:layout_width="64dp"
+                android:layout_height="80dp"
+                android:scaleType="centerCrop"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/result_title_divider"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:srcCompat="@drawable/amanita_muscaria" />
+
+            <TextView
+                android:id="@+id/result_confidence_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/result_title_divider"
+                app:layout_constraintStart_toEndOf="@id/result_preview_image"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:fontFamily="sans-serif-medium"
+                android:textSize="24sp"
+                android:textColor="@color/uiElement"
+                tools:text="90%"/>
+
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
-
-    <com.dmitrybrant.mushroomhunter.OverlayView
-        android:id="@+id/debug_overlay"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 </FrameLayout>
