--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
 
     <color name="edibleBackground">#e0f0e0</color>
     <color name="poisonousBackground">#f0e0e0</color>
+
+    <color name="uiElement">#70707f</color>
+
 </resources>
