--- a/app/src/main/res/layout/camera_connection_fragment.xml
+++ b/app/src/main/res/layout/camera_connection_fragment.xml
@@ -62,13 +62,14 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
+                android:alpha="0.5"
                 app:layout_constraintTop_toBottomOf="@id/result_binomial_text"
                 android:background="@color/uiElement"/>
 
             <ImageView
                 android:id="@+id/result_save_button"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
                 android:padding="8dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -78,8 +79,8 @@
 
             <ImageView
                 android:id="@+id/result_info_button"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:padding="8dp"
                 android:tint="@color/uiElement"
